--- a/src/app/auth-module/pages/login-page/login-page.component.html
+++ b/src/app/auth-module/pages/login-page/login-page.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="input-group">
     <label for="password">Password</label>
-    <input type="text" placeholder="Password.." formControlName="password" />
+    <input type="password" placeholder="Password.." formControlName="password" />
     <div class="error-message">
       <small
         *ngIf="
