--- a/src/app/main/pages/group-page/create-edit-page/create-edit-page.component.html
+++ b/src/app/main/pages/group-page/create-edit-page/create-edit-page.component.html
@@ -6,7 +6,7 @@
 >
   <h3>Create your own group</h3>
   <form>
-    <div class="form-control">
+    <div class="input-group">
       <label for="name">Name:</label>
       <input type="text" id="name" formControlName="name" />
       <small
@@ -22,7 +22,7 @@
         Name is too short.
       </small>
     </div>
-    <div class="form-control">
+    <div class="input-group">
       <label for="description">Description:</label>
       <textarea id="description" formControlName="description"></textarea>
       <small
