--- a/src/app/main/pages/group-page/group-page.component.html
+++ b/src/app/main/pages/group-page/group-page.component.html
@@ -3,12 +3,12 @@
     <div>
       <h3>{{ group?.name }}</h3>
       <section>
-        <app-button-component [btnType]="'btn-primary'"
+        <app-button-component [btnType]="'btn-primary'" (onClick)="openCreatePostModal()"
           >add post</app-button-component
         >
         <app-button-component
           [btnType]="'btn-secondary'"
-          (onClick)="openModal()"
+          (onClick)="openDeleteModal()"
           >delete group</app-button-component
         >
       </section>
@@ -19,7 +19,7 @@
   </section>
   <section class="group-posts-container">
     <div *ngIf="posts">
-      <app-post *ngFor="let post of posts" [post]="post"></app-post>
+      <app-post *ngFor="let post of posts" [post]="post" (onDelete)="deletePost($event)"></app-post>
     </div>
   </section>
 </div>
@@ -37,6 +37,10 @@
 
 <app-delete-group-modal
   [open]="isOpen"
-  (onCancel)="closeModal()"
+  (onCancel)="closeDeleteModal()"
   (onDelete)="deleteGroup()"
 ></app-delete-group-modal>
+
+<app-create-post-modal [open]="isCreatePostModalOpen" (onClose)="closeCreatePostModal()" (onSubmit)="createPost($event)"></app-create-post-modal>
+
+
