--- a/src/app/components-module/components/button-component/button-component.component.html
+++ b/src/app/components-module/components/button-component/button-component.component.html
@@ -1,3 +1,3 @@
-<button [class]="btnType" (click)="onBtnClick()">
+<button [class]="btnType" (click)="onBtnClick()" type="button">
   <ng-content></ng-content>
 </button>
